# book-management/src/main/java/com/book/management/application/controller/response/BookResponseDTO.java
@@ -4,9 +4,12 @@ import java.util.List;
 
 public record BookResponseDTO(
     Long id,
+    Integer bookCode,
     String title,
+    String publisher,
+    String edition,
     String publishedDate,
-    String value,
+    String price,
     List<Long> authors,
     List<Long> subjects
 ) {}
